<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pinLegenda="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_marginTop="@dimen/historico_margin_top"   
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/above_map_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/testes_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/historico_margin_top"
        
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/bt_swipe_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bot_swipe_lista"
            android:clickable="true" />

        <ImageView
            android:id="@+id/bt_swipe_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/tit_mapa" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/spinner_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/historico_margin_top"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:spinnerMode="dialog"
        android:entries="@array/testes" 
        android:prompt="@string/test_types"
        
        />

      
    <!-- Ballon markers with number of occurrences -->

    <LinearLayout
        android:id="@+id/occurrences_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/historico_margin_separator_medium"
        android:layout_marginTop="@dimen/historico_margin_separator_small"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="8" >

        <!-- Margin to right edge -->
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />
        
        <pt.ptinovacao.arqospocket.map.PinLegenda_Layout
            android:id="@+id/pinLegenda_rede"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            pinLegenda:img_type="@drawable/pin_legenda_rede_movel"
            pinLegenda:label_type="@string/mobile_network" />

        <pt.ptinovacao.arqospocket.map.PinLegenda_Layout
            android:id="@+id/pinLegenda_wifi"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.3"
            pinLegenda:img_type="@drawable/pin_legenda_wi_fi"
            pinLegenda:label_type="@string/wifi" />

        <pt.ptinovacao.arqospocket.map.PinLegenda_Layout
            android:id="@+id/pinLegenda_misto"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.3"
            pinLegenda:img_type="@drawable/pin_legenda_misto"
            pinLegenda:label_type="@string/test_not_connected" />

        <!-- Margin to right edge -->
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.6" />
        
    </LinearLayout>
    </LinearLayout>
   
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
    


    <RelativeLayout
        android:id="@+id/map_drag_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/historico_margin_separator_small"
        android:layout_marginTop="@dimen/historico_margin_separator_medium"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/icon_info"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/icon_zoom_mapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bot_zoom_mapa"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icon_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_info" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anomaly_map_info_title"
                android:textColor="@color/color_branding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_map_info_subtitle"
                android:textColor="@color/color_light_grey_text" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>