<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Upper Layout -->

    <LinearLayout
        android:id="@+id/activity_dashboard_upper_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_dashboard_lower_layout1"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_rede_movel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_rede_movel" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_network"
                android:textColor="#B8C6C8"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/network_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"
                android:textColor="@color/color_red_unavailable"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/TipRede"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#B8C6C8"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/mobile_network_gauge_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <pt.ptinovacao.arqospocket.views.GaugeView
                android:id="@+id/gv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></pt.ptinovacao.arqospocket.views.GaugeView>

            <ImageView
                android:id="@+id/btn1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:src="@drawable/logo_meo" />

            <ImageView
                android:id="@+id/activity_dashboard_mobile_network_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/bot_more_teste" />

            <LinearLayout
                android:id="@+id/activity_dashboard_mobile_network_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/gv1"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_dashboard_mobile_network_big_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#FAB300"
                    android:textSize="34sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_dashboard_mobile_network_description_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dbm"
                        android:textColor="#FAB300"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/fragment_dashboard_mobile_network_small_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=".0"
                        android:textColor="#FAB300"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_dashboard_lower_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_dashboard_separator"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!--         <LinearLayout -->
        <!--             android:layout_width="fill_parent" -->
        <!--             android:layout_height="wrap_content" -->
        <!--             android:layout_marginRight="5dp" -->
        <!--             android:layout_weight="1" -->
        <!--             android:gravity="right" -->
        <!--             android:orientation="horizontal" > -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:text="@string/cid"
            android:textColor="#B8C6C8"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/na"
            android:textColor="#FAB300"
            android:textSize="12sp" />
        <!--         </LinearLayout> -->

        <!--         <LinearLayout -->
        <!--             android:layout_width="fill_parent" -->
        <!--             android:layout_height="wrap_content" -->
        <!--             android:layout_marginLeft="5dp" -->
        <!--             android:layout_weight="1" -->
        <!--             android:orientation="horizontal" > -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:text="@string/lac"
            android:textColor="#B8C6C8"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/lac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:textColor="#FAB300"
            android:textSize="12sp" />
        <!--         </LinearLayout> -->
    </LinearLayout>

    <!-- Separador -->

    <ImageView
        android:id="@+id/activity_dashboard_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/linha_separador"/>

    <!-- Lower Layout -->

    <LinearLayout
        android:id="@+id/activity_dashboard_upper_layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_dashboard_separator"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_wi_fi"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_wi_fi" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:textColor="#B8C6C8"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/wi_fi_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"
                android:textColor="@color/color_red_unavailable"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/LinkSpeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/na"
                android:textColor="#B8C6C8"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/wifi_gauge_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <pt.ptinovacao.arqospocket.views.GaugeView
                android:id="@+id/gv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></pt.ptinovacao.arqospocket.views.GaugeView>

            <ImageView
                android:id="@+id/btn2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:src="@drawable/logo_meo" />

            <ImageView
                android:id="@+id/activity_dashboard_wifi_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/bot_more_teste" />

            <LinearLayout
                android:id="@+id/activity_dashboard_wifi_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/gv2"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_dashboard_wifi_big_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#AFBF02"
                    android:textSize="34sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_dashboard_wifi_network_description_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dbm"
                        android:textColor="#AFBF02"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/fragment_dashboard_wifi_small_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=".0"
                        android:textColor="#AFBF02"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_dashboard_lower_layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_dashboard_upper_layout2"
        android:layout_marginTop="19dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameessid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_params_essid"
            android:textAllCaps="true"
            android:textColor="#B8C6C8"
            android:textSize="12sp"
            android:layout_marginRight="2dp"/>

        <TextView
            android:id="@+id/essid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:textColor="#FAB300"
            android:textSize="12sp"
            android:layout_marginRight="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_params_channel"
            android:textAllCaps="true"
            android:textColor="#B8C6C8"
            android:textSize="12sp"
            android:layout_marginRight="2dp"/>

        <TextView
            android:id="@+id/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:textColor="#FAB300"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>